--- a/portolio-site/package.json
+++ b/portolio-site/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "framer-motion": "^12.23.12",
     "next": "15.5.2",
     "react": "19.1.0",
