--- a/portolio-site/package.json
+++ b/portolio-site/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "framer-motion": "^12.23.12",
+    "geist": "^1.5.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
